End of tutorial 3

--- a/CoffeeShop_NotWorking/.project
+++ b/CoffeeShop_NotWorking/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>decoratorFractal</name>
+	<name>CoffeeShop_NotWorking</name>
 	<comment></comment>
 	<projects>
 	</projects>
